--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "api-clima",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build:styles": "postcss src/styles.css -o src/styles.css",
+    "watch:styles": "postcss src/styles.css -o src/styles.css --watch",
+    "build": "ng build && npm run build:styles",
+    "start": "ng serve && npm run watch:styles"
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^17.0.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
@@ -18,7 +18,18 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
+    "@types/googlemaps": "^3.43.3",
+    "angular-openlayers": "^1.0.1",
+    "autoprefixer": "^10.4.16",
+    "cesium": "^1.112.0",
+    "moment": "^2.30.0",
+    "ngx-google-places-autocomplete": "^2.0.5",
+    "postcss": "^8.4.32",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.1",
+    "tailwindcss": "^3.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -27,6 +38,7 @@
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.8",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
